--- a/src/sass/helpers/_global.scss
+++ b/src/sass/helpers/_global.scss
@@ -8,7 +8,8 @@
 
 html {
   box-sizing: border-box;
-  font-size: 0.84vw;
+  font-size: 16px;
+  // font-size: 0.83vw;
 
   @include mw($ldt) {
     font-size: 1.1vw;
@@ -29,8 +30,8 @@ html {
 
 body {
   @include font("ProximaNova");
-  color: #fff;
-  background-color: #a70e13;
+  color: $text-dark;
+  background-color: $bg;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -136,142 +137,6 @@ input:-webkit-autofill:active {
 
   @include mw($dt) {
     width: auto;
-  }
-}
-
-.border-r {
-  border-right: 1px solid #121212;
-}
-.border-l {
-  border-left: 1px solid #121212;
-}
-
-.title {
-  font-size: 3.125rem;
-
-  @include mw($ph) {
-    font-size: 9.06vw;
-  }
-}
-
-.p80 {
-  padding: 5rem;
-
-  @include mw($dt) {
-    padding: 3.2rem;
-  }
-
-  @include mw($tb) {
-    padding: 5rem;
-  }
-
-  @include mw($ph) {
-    padding: 2.857rem 1.14rem;
-  }
-}
-
-.subtitle {
-  font-size: 2.375rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 120%;
-
-  @include mw($ph) {
-    font-size: 6.93vw;
-  }
-}
-
-.swiper-button-next {
-  color: #121212;
-}
-
-.swiper-button-next:after,
-.swiper-rtl .swiper-button-prev:after {
-  color: #121212;
-
-  @include mw($ph) {
-    content: "";
-  }
-}
-
-.swiper-button-prev:after,
-.swiper-rtl .swiper-button-next:after {
-  color: #121212;
-  @include mw($ph) {
-    content: "";
-  }
-}
-
-.swiper-pagination-bullet.swiper-pagination-bullet-active {
-  background-color: #121212;
-}
-
-.fBbmpu {
-  flex-grow: 1;
-  height: 100%;
-}
-
-.swiper-pagination {
-  display: none;
-  @include mw($tb) {
-    display: flex;
-    justify-content: center;
-    column-gap: torem(12);
-    padding: torem(5) 0;
-  }
-}
-
-.bullet {
-  &__item {
-    width: torem(12);
-    height: torem(12);
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.48);
-    border: torem(2) solid transparent;
-    transition: 0.5s;
-
-    &--active {
-      background-color: #a70e13;
-      border: torem(2) solid #f5ec5a;
-      transform: scale(1.8);
-    }
-  }
-}
-
-.prizes--bullets {
-  margin-top: 1.7rem;
-}
-
-.how--bullets {
-  margin-top: 2.8rem;
-}
-
-.persons--bullets {
-  margin-top: 3.5rem;
-}
-
-.persons {
-  .swiper {
-    width: 100%;
-    margin-left: 0;
-    max-width: 91%;
-
-    @include mw($dt) {
-      max-width: 100%;
-      margin-left: auto;
-    }
-  }
-
-  .swiper-wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    row-gap: 3.8rem;
-    column-gap: 1rem;
-
-    @include mw($tb) {
-      display: flex;
-      gap: 0;
-    }
   }
 }
 
