add form fields

--- a/src/components/home/Promo/Promo.module.scss
+++ b/src/components/home/Promo/Promo.module.scss
@@ -1,7 +1,7 @@
 @import "../../../sass/helpers/variables";
 @import "../../../sass/helpers/mixins.scss";
 
-.templateName {
+.promo {
   &__inner {
   }
 }
