--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 @import "./helpers/_font";
 @import "./helpers/_global";
 @import "./vendor/menu";
+@import "../UI/form/input/Form.scss"
 // @import "../components/home/faq/style.scss";
 // @import "../components/UI/form/style.scss";
 // @import "../components/home/step/style.scss";
