--- a/src/sass/helpers/_global.scss
+++ b/src/sass/helpers/_global.scss
@@ -35,7 +35,9 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+}
 
+.scroll {
   &::-webkit-scrollbar {
     width: 8px;
   }
