--- a/src/templates_generate/default/TemplateName.module.scss
+++ b/src/templates_generate/default/TemplateName.module.scss
@@ -1,5 +1,5 @@
-@import "../../../sass/helpers/variables";
-@import "../../../sass/helpers/mixins.scss";
+@import "@/sass/helpers/variables";
+@import "@/sass/helpers/mixins.scss";
 
 .templateName {
   &__inner {
