--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,5 +1,5 @@
-@import "../../sass/helpers/variables";
-@import "../../sass/helpers/mixins.scss";
+@import "@/sass/helpers/variables";
+@import "@/sass/helpers/mixins.scss";
 
 .header {
   position: sticky;
